// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/team_channel_settings/team/TeamMembers should match snapshot 1`] = `
<AdminPanel
  button={
    <ToggleModalButton
      className="btn btn-primary"
      dialogProps={
        Object {
          "excludeUsers": Object {},
          "filterExcludeGuests": true,
          "includeUsers": Object {},
          "onAddCallback": [Function],
          "skipCommit": true,
          "team": Object {
            "allow_open_invite": false,
            "allowed_domains": "",
            "company_name": "",
            "create_at": 0,
            "delete_at": 0,
            "description": "",
            "display_name": "name",
            "email": "",
            "group_constrained": false,
            "id": "team-1",
            "invite_id": "",
            "name": "DN",
            "scheme_id": "id",
            "type": "O",
            "update_at": 0,
          },
        }
      }
      dialogType={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "type": [Function],
        }
      }
      id="addTeamMembers"
      modalId="add_user_to_team"
    >
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Add Members"
        id="admin.team_settings.team_details.add_members"
      />
    </ToggleModalButton>
  }
  id="teamMembers"
  subtitle={
    Object {
      "defaultMessage": "A list of users who are currently in the team right now",
      "id": "admin.team_settings.team_detail.membersDescription",
    }
  }
  title={
    Object {
      "defaultMessage": "Members",
      "id": "admin.team_settings.team_detail.membersTitle",
    }
  }
>
  <UserGrid
    excludeUsers={Object {}}
    filterProps={
      Object {
        "keys": Array [
          "role",
        ],
        "onFilter": [Function],
        "options": Object {
          "role": Object {
            "keys": Array [
              "system_guest",
              "team_user",
              "team_admin",
              "system_admin",
            ],
            "name": <Memo(MemoizedFormattedMessage)
              defaultMessage="Role"
              id="admin.user_grid.role"
            />,
            "values": Object {
              "system_admin": Object {
                "name": <Memo(MemoizedFormattedMessage)
                  defaultMessage="System Admin"
                  id="admin.user_grid.system_admin"
                />,
                "value": false,
              },
              "system_guest": Object {
                "name": <Memo(MemoizedFormattedMessage)
                  defaultMessage="Guest"
                  id="admin.user_grid.guest"
                />,
                "value": false,
              },
              "team_admin": Object {
                "name": <Memo(MemoizedFormattedMessage)
                  defaultMessage="Team Admin"
                  id="admin.user_grid.team_admin"
                />,
                "value": false,
              },
              "team_user": Object {
                "name": <Memo(MemoizedFormattedMessage)
                  defaultMessage="Member"
                  id="admin.user_item.member"
                />,
                "value": false,
              },
            },
          },
        },
      }
    }
    includeUsers={Object {}}
    loadPage={[Function]}
    loading={true}
    memberships={
      Object {
        "user-1": Object {
          "delete_at": 0,
          "mention_count": 0,
          "mention_count_root": 0,
          "msg_count": 0,
          "msg_count_root": 0,
          "roles": "team_user",
          "scheme_admin": false,
          "scheme_guest": false,
          "scheme_user": true,
          "team_id": "team_id",
          "user_id": "user-1",
        },
        "user-2": Object {
          "delete_at": 0,
          "mention_count": 0,
          "mention_count_root": 0,
          "msg_count": 0,
          "msg_count_root": 0,
          "roles": "team_user",
          "scheme_admin": false,
          "scheme_guest": false,
          "scheme_user": true,
          "team_id": "team_id",
          "user_id": "user-2",
        },
        "user-3": Object {
          "delete_at": 0,
          "mention_count": 0,
          "mention_count_root": 0,
          "msg_count": 0,
          "msg_count_root": 0,
          "roles": "team_user",
          "scheme_admin": false,
          "scheme_guest": false,
          "scheme_user": true,
          "team_id": "team_id",
          "user_id": "user-3",
        },
      }
    }
    onSearch={[Function]}
    removeUser={[Function]}
    scope="team"
    term=""
    totalCount={3}
    updateMembership={[Function]}
    users={
      Array [
        Object {
          "auth_service": "",
          "bot_description": "",
          "create_at": 0,
          "delete_at": 0,
          "email": "",
          "first_name": "",
          "id": "user-1",
          "is_bot": false,
          "last_activity_at": 0,
          "last_name": "",
          "last_password_update": 0,
          "last_picture_update": 0,
          "locale": "",
          "mfa_active": false,
          "nickname": "",
          "notify_props": Object {
            "calls_desktop_sound": "true",
            "channel": "false",
            "comments": "never",
            "desktop": "default",
            "desktop_sound": "false",
            "email": "false",
            "first_name": "false",
            "highlight_keys": "",
            "mark_unread": "mention",
            "mention_keys": "",
            "push": "none",
            "push_status": "offline",
          },
          "password": "",
          "position": "",
          "props": Object {},
          "roles": "",
          "terms_of_service_create_at": 0,
          "terms_of_service_id": "",
          "update_at": 0,
          "username": "some-user",
        },
        Object {
          "auth_service": "",
          "bot_description": "",
          "create_at": 0,
          "delete_at": 0,
          "email": "",
          "first_name": "",
          "id": "user-2",
          "is_bot": false,
          "last_activity_at": 0,
          "last_name": "",
          "last_password_update": 0,
          "last_picture_update": 0,
          "locale": "",
          "mfa_active": false,
          "nickname": "",
          "notify_props": Object {
            "calls_desktop_sound": "true",
            "channel": "false",
            "comments": "never",
            "desktop": "default",
            "desktop_sound": "false",
            "email": "false",
            "first_name": "false",
            "highlight_keys": "",
            "mark_unread": "mention",
            "mention_keys": "",
            "push": "none",
            "push_status": "offline",
          },
          "password": "",
          "position": "",
          "props": Object {},
          "roles": "",
          "terms_of_service_create_at": 0,
          "terms_of_service_id": "",
          "update_at": 0,
          "username": "some-user",
        },
        Object {
          "auth_service": "",
          "bot_description": "",
          "create_at": 0,
          "delete_at": 0,
          "email": "",
          "first_name": "",
          "id": "user-3",
          "is_bot": false,
          "last_activity_at": 0,
          "last_name": "",
          "last_password_update": 0,
          "last_picture_update": 0,
          "locale": "",
          "mfa_active": false,
          "nickname": "",
          "notify_props": Object {
            "calls_desktop_sound": "true",
            "channel": "false",
            "comments": "never",
            "desktop": "default",
            "desktop_sound": "false",
            "email": "false",
            "first_name": "false",
            "highlight_keys": "",
            "mark_unread": "mention",
            "mention_keys": "",
            "push": "none",
            "push_status": "offline",
          },
          "password": "",
          "position": "",
          "props": Object {},
          "roles": "",
          "terms_of_service_create_at": 0,
          "terms_of_service_id": "",
          "update_at": 0,
          "username": "some-user",
        },
      ]
    }
  />
</AdminPanel>
`;

exports[`admin_console/team_channel_settings/team/TeamMembers should match snapshot loading no users 1`] = `
<AdminPanel
  button={
    <ToggleModalButton
      className="btn btn-primary"
      dialogProps={
        Object {
          "excludeUsers": Object {},
          "filterExcludeGuests": true,
          "includeUsers": Object {},
          "onAddCallback": [Function],
          "skipCommit": true,
          "team": Object {
            "allow_open_invite": false,
            "allowed_domains": "",
            "company_name": "",
            "create_at": 0,
            "delete_at": 0,
            "description": "",
            "display_name": "name",
            "email": "",
            "group_constrained": false,
            "id": "team-1",
            "invite_id": "",
            "name": "DN",
            "scheme_id": "id",
            "type": "O",
            "update_at": 0,
          },
        }
      }
      dialogType={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "type": [Function],
        }
      }
      id="addTeamMembers"
      modalId="add_user_to_team"
    >
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Add Members"
        id="admin.team_settings.team_details.add_members"
      />
    </ToggleModalButton>
  }
  id="teamMembers"
  subtitle={
    Object {
      "defaultMessage": "A list of users who are currently in the team right now",
      "id": "admin.team_settings.team_detail.membersDescription",
    }
  }
  title={
    Object {
      "defaultMessage": "Members",
      "id": "admin.team_settings.team_detail.membersTitle",
    }
  }
>
  <UserGrid
    excludeUsers={Object {}}
    filterProps={
      Object {
        "keys": Array [
          "role",
        ],
        "onFilter": [Function],
        "options": Object {
          "role": Object {
            "keys": Array [
              "system_guest",
              "team_user",
              "team_admin",
              "system_admin",
            ],
            "name": <Memo(MemoizedFormattedMessage)
              defaultMessage="Role"
              id="admin.user_grid.role"
            />,
            "values": Object {
              "system_admin": Object {
                "name": <Memo(MemoizedFormattedMessage)
                  defaultMessage="System Admin"
                  id="admin.user_grid.system_admin"
                />,
                "value": false,
              },
              "system_guest": Object {
                "name": <Memo(MemoizedFormattedMessage)
                  defaultMessage="Guest"
                  id="admin.user_grid.guest"
                />,
                "value": false,
              },
              "team_admin": Object {
                "name": <Memo(MemoizedFormattedMessage)
                  defaultMessage="Team Admin"
                  id="admin.user_grid.team_admin"
                />,
                "value": false,
              },
              "team_user": Object {
                "name": <Memo(MemoizedFormattedMessage)
                  defaultMessage="Member"
                  id="admin.user_item.member"
                />,
                "value": false,
              },
            },
          },
        },
      }
    }
    includeUsers={Object {}}
    loadPage={[Function]}
    loading={true}
    memberships={Object {}}
    onSearch={[Function]}
    removeUser={[Function]}
    scope="team"
    term=""
    totalCount={0}
    updateMembership={[Function]}
    users={Array []}
  />
</AdminPanel>
`;
